--- a/presse-kp.html
+++ b/presse-kp.html
@@ -161,7 +161,7 @@
   <div>
     <h3>Unternehmen</h3>
     <a href="#">Über uns</a>
-    <a href="#">Nachhaltigkeit</a>
+    <a href="#">Impressum</a>
     <a href="#">Presse</a>
   </div>
   <div>
@@ -172,7 +172,7 @@
   </div>
 </footer>
 
-<div class="copyright">© 2025 KORREKT Markt GmbH – neu gedacht, echt KORREKT.</div>
+<div class="copyright">© 2025 KORREKT Markt – neu gedacht, echt KORREKT.</div>
 
 </body>
 </html>
