--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 <body>
     <header>
       <div class="logo">
-        <img src="korrekt.png" alt="KORREKT Logo" />
+        <img src="https://korrekt-markt.de/korrekt.png" alt="KORREKT Logo" />
       </div>
 
       <div class="search">
@@ -385,7 +385,7 @@
         <span title="Konto">👤</span>
         <span title="Filialfinder">📍</span>
         <span title="korrektPlus">
-          <img src="korrektPlus-web_transparent.png" alt="korrektPlus Logo" />
+          <img src="https://korrekt-markt.de/korrektPlus-web_transparent.png" alt="korrektPlus Logo" />
         </span>
       </div>
     </header>
@@ -470,7 +470,7 @@
   <!-- PAYBACK BOX -->
   <section class="payback">
     <div class="payback-box">
-      <img src="korrektPlus-web_transparent.png" alt="kp Logo" />
+      <img src="https://korrekt-markt.de/korrektPlus-web_transparent.png" alt="kp Logo" />
       <div>
         <h3>Bei KORREKT. Plus Punkte sammeln!</h3>
         <p>Jetzt mit jedem Einkauf Punkte sichern und exklusive Prämien entdecken.</p>
