--- a/presse.html
+++ b/presse.html
@@ -140,7 +140,7 @@
 
   <header>
     <div class="logo">
-        <img src="korrekt.png" alt="KORREKT Logo" />
+        <img src="https://korrekt-markt.de/korrekt.png" alt="KORREKT Logo" />
     </div>
     <div class="search">
       <input type="text" placeholder="Suche..." />
