--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Impressum – KORREKT 2026</title>
+  <title>Impressum – KORREKT. Markt</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -13,8 +13,6 @@
       color: #eee;
       overflow-x: hidden;
     }
-
-    /* HEADER */
     header {
       position: fixed;
       top: 0;
@@ -26,201 +24,66 @@
       background: linear-gradient(90deg, #333, #444);
       padding: 0.8rem 2rem;
       z-index: 1000;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.4);
     }
-    .logo img { height: 44px; }
-    .search {
-      flex: 0 0 340px;
-      margin: 0 1.5rem;
-      position: relative;
-    }
-    .search input {
-      width: 100%;
-      padding: 0.7rem 1.2rem;
-      border-radius: 40px;
-      border: none;
-      background: #222;
-      color: #eee;
-      font-size: 1rem;
-      padding-left: 2.6rem;
-      box-shadow: inset 0 0 4px rgba(0,0,0,0.4);
-    }
-    .search::before {
-      content: "🔍";
-      position: absolute;
-      left: 0.9rem;
-      top: 0.55rem;
-      opacity: 0.7;
-      font-size: 1.1rem;
-    }
-    .icons {
-      display: flex;
-      align-items: center;
-      gap: 0.9rem;
-    }
-    .icons span {
-      color: #eee;
-      cursor: pointer;
-      transition: color 0.2s;
-      display: flex;
-      align-items: center;
-    }
-    .icons span:hover { color: #ff0a7a; }
-    .icons img {
-      height: 30px;
-      width: auto;
-      object-fit: contain;
-      background: transparent;
-      border: none;
-    }
-
-    /* MAIN CONTENT */
     main {
       max-width: 900px;
-      margin: 6rem auto 4rem;
-      padding: 2rem;
-      background: #1a1a1a;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    }
-
-    main h1 {
-      color: #ff0a7a;
-      font-size: 2.4rem;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-    main h2 {
-      color: #00a7a0;
-      font-size: 1.4rem;
-      margin-top: 2rem;
-    }
-    main p {
+      margin: 7rem auto 3rem auto;
+      padding: 0 1.5rem;
       line-height: 1.7;
-      font-size: 1.05rem;
-      color: #ddd;
+    }
+    h1 {
+      font-weight: 800;
       margin-bottom: 1.5rem;
     }
-
-    /* FOOTER */
-    footer {
-      background: #111;
-      color: white;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 2rem;
-      padding: 3rem;
+    h2 {
+      margin-top: 2.5rem;
+      font-weight: 600;
     }
-    footer h3 { color: #ff0a7a; }
-    footer a {
-      color: #bbb;
-      text-decoration: none;
-      display: block;
-      margin: 0.3rem 0;
-    }
-    footer a:hover { color: #fff; }
-
-    .copyright {
-      background: #000;
-      color: #aaa;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
+    a {
+      color: #fff;
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <div class="logo">
-        <img src="https://korrekt-markt.de/korrekt.png" alt="KORREKT Logo" />
-    </div>
-    <div class="search">
-      <input type="text" placeholder="Suche..." />
-    </div>
-    <div class="icons">
-      <span>👤</span>
-      <span>📍</span>
-      <span><img src="https://korrekt-markt.de/korrektPlus-web_transparent.png" alt="Payback Logo"></span>
-    </div>
-  </header>
+<header>
+  <div style="font-size: 1.4rem; font-weight: 800;">KORREKT.</div>
+</header>
 
-  <main>
-    <h1>Impressum</h1>
+<main>
+  <h1>Impressum</h1>
 
-    <h2>KORREKT. Markt GmbH i. G.</h2>
+  <h2>Angaben gemäß § 5 TMG</h2>
+  <p>
+    Dies ist ein privat betriebenes Projekt zur Entwicklung des zukünftigen Supermarkt-Konzeptes „KORREKT.“.<br>
+    Kein eingetragenes Unternehmen. Kein Handelsregistereintrag.
+  </p>
 
-    <p>
-      Vertreten durch den Gesellschafter:<br>
-      <strong>Evan Herzig</strong><br>
-      Friedrich-Schneider-Str. 66<br>
-      06844 Dessau-Roßlau<br>
-      Deutschland
-    </p>
+  <p><strong>Verantwortlich für den Inhalt:</strong><br>
+    Evan Herzig<br>
+    (Privatadresse wird aus Sicherheitsgründen nicht öffentlich angezeigt)
+  </p>
 
-    <h2>Kontakt</h2>
-    <p>
-      E-Mail: unternehmen@korrekt-markt.de
-    </p>
+  <h2>Kontakt</h2>
+  <p>
+    E-Mail: <a href="mailto:unternehmens@korrekt-markt.de">unternehmens@korrekt-markt.de</a><br>
+    Projekt-Website: korrekt-markt.de
+  </p>
 
-    <h2>Rechtliche Hinweise</h2>
-    <p>
-      Die KORREKT. Markt GmbH befindet sich derzeit in Gründung (i. G.) und ist noch
-      <strong>nicht</strong> im Handelsregister eingetragen.
-    </p>
+  <h2>Haftungsausschluss</h2>
+  <p>
+    Dieses Projekt befindet sich in der konzeptionellen und technischen Entwicklung.
+    Es werden keinerlei kommerzielle Leistungen angeboten.
+  </p>
 
-    <p>
-      Umsatzsteuer-ID: wird nach Eintragung vergeben.<br>
-      Handelsregister: folgt nach Eintragung beim Amtsgericht Stendal.
-    </p>
+  <h2>Markenhinweis</h2>
+  <p>
+    „KORREKT.“ ist ein privates Marken- und Konzeptprojekt ohne eingetragene Firmenform.
+  </p>
 
-    <h2>Verantwortlich für Inhalte gemäß § 55 Abs. 2 RStV</h2>
-    <p>
-      Evan Herzig<br>
-      Anschrift wie oben.
-    </p>
-
-    <h2>Online-Streitbeilegung</h2>
-    <p>
-      Plattform der EU-Kommission zur Online-Streitbeilegung:<br>
-      <a href="https://ec.europa.eu/consumers/odr" style="color:#00a7a0;">https://ec.europa.eu/consumers/odr</a>
-    </p>
-
-    <p>
-      Wir sind weder bereit noch verpflichtet, an Streitbeilegungsverfahren vor einer
-      Verbraucherschlichtungsstelle teilzunehmen.
-    </p>
-
-  </main>
-
-  <footer>
-    <div>
-      <h3>Service</h3>
-      <a href="#">Hilfe & FAQ</a>
-      <a href="#">Kontakt</a>
-      <a href="#">Rückgabe</a>
-    </div>
-    <div>
-      <h3>Unternehmen</h3>
-      <a href="#">Über uns</a>
-      <a href="#">Impressum</a>
-      <a href="#">Presse</a>
-    </div>
-    <div>
-      <h3>Karriere</h3>
-      <a href="#">Jobs</a>
-      <a href="#">Ausbildung</a>
-      <a href="#">Initiativbewerbung</a>
-    </div>
-    <div>
-      <h3>Folge uns</h3>
-      <a href="#">Instagram</a>
-      <a href="#">Facebook</a>
-      <a href="#">LinkedIn</a>
-    </div>
-  </footer>
-
-  <div class="copyright">© 2025 KORREKT Markt – neu gedacht, echt KORREKT.</div>
+</main>
 
 </body>
 </html>
