--- a/index.html
+++ b/index.html
@@ -200,12 +200,38 @@
 <section id="vorteile">
   <h2>Deine Vorteile</h2>
   <div class="grid">
-    <div class="card"><h3>Punkte sammeln</h3><p>Bei jedem Einkauf automatisch.</p></div>
-    <div class="card"><h3>Coupons</h3><p>Exklusive Rabatte nur für dich.</p></div>
-    <div class="card"><h3>Digitale Belege</h3><p>Alles in der App gespeichert.</p></div>
-    <div class="card"><h3>Personalisierung</h3><p>Angebote, die zu dir passen.</p></div>
+    <div class="card">
+      <h3>Punkte sammeln</h3>
+      <p>Automatisch bei jedem Einkauf – ganz ohne Extraaufwand.</p>
+    </div>
+
+    <div class="card">
+      <h3>Coupons</h3>
+      <p>Persönliche Rabatte, direkt in der App verfügbar.</p>
+    </div>
+
+    <div class="card">
+      <h3>Digitale Belege</h3>
+      <p>Alle Kassenbons jederzeit griffbereit gespeichert.</p>
+    </div>
+
+    <div class="card">
+      <h3>Treuepunkte</h3>
+      <p>Bei Sammelaktionen Produkte mit Treuepunkten stark reduziert kaufen.</p>
+    </div>
+
+    <div class="card">
+      <h3>Prospekte</h3>
+      <p>Alle Angebote digital, aktuell und übersichtlich.</p>
+    </div>
+
+    <div class="card">
+      <h3>Live aktualisierte Preise</h3>
+      <p>Plane deinen Einkauf mit tagesaktuellen Preisen.</p>
+    </div>
   </div>
 </section>
+
 
 <!-- LOGIN -->
 <section id="login">
