--- a/dashboard.html
+++ b/dashboard.html
@@ -112,7 +112,7 @@
   <!-- PUNKTE -->
   <div class="card">
     <h2>Deine Punkte</h2>
-    <div class="big" id="punkte">0/div>
+    <div class="big" id="punkte">0</div>
     <div class="muted">Gesammelte korrektPlus Punkte</div>
   </div>
 
